--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="left">
         <div class="imageContainer">
             <div class="imageText">ODIN</div>
-            <img src="\Images\halie-west-25xggax4bSA-unsplash.jpg" class="image">
+            <img src="/Images/halie-west-25xggax4bSA-unsplash.jpg" class="image">
         </div>
     </div>
     <div class="right">
@@ -23,40 +23,43 @@
 
             <p>You <em>know</em> you want to.</p>
         </div>
-        <div class="form">
-            <form action="#">
-                <legend>Lets do this!</legend>
-                <div class="inputs">
-                    <label for="FName">FIRST NAME</label>
-                    <input type="text" name="FName">
+        <form action="#">
+            <legend>Lets do this!</legend>
+            <div class="form">    
+                <div class="left-column">
+                    <div class="inputs">
+                        <label for="FName">FIRST NAME</label>
+                        <input type="text" name="FName">
+                    </div>
+                    <div class="inputs">
+                        <label for="LName">LAST NAME</label>
+                        <input type="text" name="LName">
+                    </div>
+                    <div class="inputs">
+                        <label for="email">EMAIL</label>
+                        <input type="text" name="email">
+                    </div>
                 </div>
-                <div class="inputs">
-                    <label for="LName">LAST NAME</label>
-                    <input type="text" name="LName">
+                <div class="right-column">
+                    <div class="inputs">
+                        <label for="phone">PHONE NUMBER</label>
+                        <input type="text" name="phone">
+                    </div>
+                    <div class="inputs">
+                        <label for="password">PASSWORD</label>
+                        <input type="text" name="password">
+                    </div>
+                    <div class="inputs">
+                        <label for="conpassword">CONFIRM PASSWORD</label>
+                        <input type="text" name="conpassword">
+                    </div>
                 </div>
-                <div class="inputs">
-                    <label for="email">EMAIL</label>
-                    <input type="text" name="email">
-                </div>
-                <div class="inputs">
-                    <label for="phone">PHONE NUMBER</label>
-                    <input type="text" name="phone">
-                </div>
-                <div class="inputs">
-                    <label for="password">PASSWORD</label>
-                    <input type="text" name="password">
-                </div>
-                <div class="inputs">
-                    <label for="conpassword">CONFIRM PASSWORD</label>
-                    <input type="text" name="conpassword">
-                </div>
-                
-            </form>
-        </div>
+            </div>
+        </form>
         <footer>
             <button type="submit" class="btn">Create Account</button>
             <div class="login-box">
-                <h1>Already have an account?<a href="http://">Log in</a></h1>
+                <p class="login">Already have an account?<a href="http://">Log in</a></p>
             </div>
         </footer>
     </div>
